--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,3 +1,3 @@
 threadPoolSize=4
-mazeGeneratingAlgorithm="My"
-mazeSearchingAlgorithm="BFS"
+mazeGeneratingAlgorithm=My
+mazeSearchingAlgorithm=BFS
